Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@i915_selftest@live@execlists - incomplete - i915/intel_execlists_live_selftests: live_unlite_preempt failed with error -5
<0> [321.494609] <idle>-0 3..s1 313723058us : rps_timer: 0000:00:02.0 busy:20994291 [100%], max:[20994291, 0, 0], interval:20
<0> [321.494649] <idle>-0 3..s1 313744056us : rps_timer: 0000:00:02.0 busy:20996931 [99%], max:[20996931, 0, 0], interval:20
<0> [321.494689] <idle>-0 3..s1 313765072us : rps_timer: 0000:00:02.0 busy:21012590 [99%], max:[21012590, 0, 0], interval:20
<0> [321.494730] <idle>-0 3..s1 313786073us : rps_timer: 0000:00:02.0 busy:21000349 [99%], max:[21000349, 0, 0], interval:20
<0> [321.494770] <idle>-0 3..s1 313807072us : rps_timer: 0000:00:02.0 busy:20999712 [100%], max:[20999712, 0, 0], interval:20
<0> [321.494820] i915_sel-5027 3.... 313808541us : i915_request_retire: 0000:00:02.0 bcs0: fence 110ce:2, current 2
<0> [321.494860] i915_sel-5027 3.... 313808551us : intel_context_unpin: 0000:00:02.0 bcs0: context:110ce unpin
<0> [321.494954] i915_sel-5027 3.... 313808890us : igt_flush_test: igt_live_test_end+0x10/0xb0 [i915] timed out.
<0> [321.494958] ---------------------------------
<7> [321.497118] intel_gt_set_wedged called from igt_flush_test+0x104/0x110 [i915]
<6> [321.497486] [drm] GuC communication disabled
<3> [321.528057] i915/intel_execlists_live_selftests: live_unlite_preempt failed with error -5
<7> [321.528150] i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling power well 2
<7> [321.528239] i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling DDI A/E IO power well
<7> [321.528305] i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling DDI B IO power well
<7> [321.528369] i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling DDI C IO power well
<7> [321.528433] i915 0000:00:02.0: [drm:intel_power_well_enable [i915]] enabling DDI D IO power well
<7> [321.580160] intel_gt_set_wedged called from intel_gt_set_wedged_on_init+0x15/0x20 [i915]
<4> [321.704722] i915: probe of 0000:00:02.0 failed with error -5